base/mysql/Pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: std-db
  labels:
    env: dev
    db: std-db
  namespace: dev
spec:
  volumes:
    - name: std-db-vol
      persistentVolumeClaim:
        claimName: dbclaim
  containers:
    - name: std-db
      image: mysql:8.0
      ports:
        - name: db-port
          containerPort: 3306
          protocol: TCP
      volumeMounts:
        - name: std-db-vol
          mountPath: /var/lib/mysql
