base/mysql/service.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-db-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 3306
  selector:
    app: std-db
