base/mysql/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: std-db-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: db-svc
            port:
              number: 3306
        pathType: Exact
